--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div class="row py-5">
                 <div class="col-12 col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
 
-                    <h1 class="mb-3 mt-5 text-center">Reemplaza este título</h1>
+                    <h1 class="mb-3 mt-5 text-center">Antonio Petruccelli</h1>
 
-                    <h2 class="fs-6 mb-5 text-center text-uppercase">Reemplaza este subtítulo con tu nombre y apellido</h2>
+                    <h2 class="fs-6 mb-5 text-center text-uppercase">Helena Martínez</h2>
 
-                    <p class="lead">Reemplaza este párrafo con un texto introductorio, de una extensión máxima de cien palabras. En este y todos los reemplazos, respeta los colores del código fuente en tu editor. Los colores son indicaciones. Imagina que el editor de código fuente te está indicando: En el lenguaje que reconozco, aquí reconzco una descripción que no deberías confundir con otra.</p>
+                    <p class="lead">Antonio Petruccelli (1907-1994) fue un diseñador editorial estadounidense que publicó 28 portadas, imágenes interiores e infografías para la revista Fortune entre 1933 y 1945. En sus imágenes, se destacó por aprovechar al máximo el potencial de color rico y denso, aumentado con un gran repertorio de rayado y punteado. Muchas de sus obras sugieren una comprensión intuitiva de la dinámica del futurismo italiano combinada con una sensibilidad Art Deco.</p>
 
-                    <p>Reemplaza este párrafo con un texto que complemente al introductorio. Puedes extender este párrafo hasta las doscientas palabras. Si lo deseas, puedes agregar un párrafo más; basta con que repitas el elemento demarcado por <code>&lt;p&gt;</code> y <code>&lt;/p&gt;</code>.</p>
+                    <p>A continuación, algunos de sus trabajos más destacados para la revista Fortune y otras revistas.</p>
 
                 </div>
             </div>
@@ -37,53 +37,33 @@
             <div class="row g-3">
                 <!--primera imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/petrocelli1.jpg" class="img-fluid" alt="describe lo que se ve en la imagen" />
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <img loading="lazy" src="img/petrucelli1.jpg" class="img-fluid" alt="describe lo que se ve en la imagen" />
+                    <figcaption class="p-1 mb-3">Diagrama para Fortune acerca de la movilización tecnológica para la guerra (1942)</figcaption>
                 </figure>
                 <!--segunda imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/petrocelli2.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <img loading="lazy" src="img/petrucelli2.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <figcaption class="p-1 mb-3">Diagrama para Fortune acerca del manejo político-económico en la industria americana (1940)</figcaption>
                 </figure>
                 <!--tercera imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <img loading="lazy" src="img/petrucelli3.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <figcaption class="p-1 mb-3">Diagrama para Fortune acerca del departamento de guerra estadounidense (1941)</figcaption>
                 </figure>
                 <!--cuarta imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <img loading="lazy" src="img/petrucelli4.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <figcaption class="p-1 mb-3">Diagrama para Fortune acerca de las fuentes de origen del dinero dentro de la política estadounidense (1940)</figcaption>
                 </figure>
                 <!--quinta imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <img loading="lazy" src="img/petrucelli5.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <figcaption class="p-1 mb-3">Diagrama acerca de un proceso industrial (s.f)</figcaption>
                 </figure>
                 <!--sexta imagen-->
                 <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
-                </figure>
-                <!--séptima imagen-->
-                <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
-                </figure>
-                <!--octava imagen-->
-                <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
-                </figure>
-                <!--novena imagen-->
-                <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
-                </figure>
-                <!--décima imagen-->
-                <figure class="col-12 col-sm-6">
-                    <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <img loading="lazy" src="img/petrucelli6.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
+                    <figcaption class="p-1 mb-3">Diagrama acerca del proceso industrial del petróleo (s.f).</figcaption>
                 </figure>
                 <!--no hay más imágenes-->
             </div>
@@ -94,7 +74,7 @@
                 <div class="col-12">
                     <p class="d-flex justify-content-between small p-1 m-0">
                         <!--reemplaza el # que sigue con la URL de tu cuenta en GitHub-->
-                        <a href="#" class="link-light">Reemplaza esto con tu Nombre y Apellido</a>
+                        <a href="https://helena-martinez.github.io/info-digital-01/" class="link-light">Helena Martínez</a>
                         <a href="https://github.com/profesorfaco/dno075-2021-2/" class="link-light">Infografía Digital</a>
                         <a href="https://github.com/profesorfaco/dno075-2021-2/tree/main/clase-01" class="d-none d-lg-inline link-light">Lunes 16 de agosto, 2021</a>
                     </p>
