--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="col-12">
                     <p class="d-flex justify-content-between small p-1 m-0">
                         <!--reemplaza el # que sigue con la URL de tu cuenta en GitHub-->
-                        <a href="https://helena-martinez.github.io/info-digital-01/" class="link-light">Helena Martínez</a>
+                        <a href="https://github.com/helena-martinez" class="link-light">Helena Martínez</a>
                         <a href="https://github.com/profesorfaco/dno075-2021-2/" class="link-light">Infografía Digital</a>
                         <a href="https://github.com/profesorfaco/dno075-2021-2/tree/main/clase-01" class="d-none d-lg-inline link-light">Lunes 16 de agosto, 2021</a>
                     </p>
